Fixes, bloqueos, newsletter, reportes y categorias añadidos